[package]
name = "custom_commands_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
descord = { git = "https://github.com/DescordLib/descord", version = "0.1.10" }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
nanoserde = "0.1.37"
redis = { version = "0.26.1", features = ["tokio-comp"] }
tokio = "1.40.0"
